<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp">

    <Button
        android:id="@+id/item_alarms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_alarm_black"
        android:enabled="false"
        android:text="@string/item_alarms"/>

    <Button
        android:id="@+id/item_bookmarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_bookmark_black"
        android:enabled="false"
        android:text="@string/item_bookmarks"/>

    <Button
        android:id="@+id/item_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_event_black"
        android:enabled="false"
        android:text="@string/item_calendar"/>

    <Button
        android:id="@+id/item_call_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_call_black"
        android:enabled="false"
        android:text="@string/item_call_log"/>

    <Button
        android:id="@+id/item_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_contacts_black"
        android:enabled="false"
        android:text="@string/item_contacts"/>

    <Button
        android:id="@+id/item_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_chat_black"
        android:text="@string/item_messages"/>
</LinearLayout>